--- a/ElectricityBillPortal/src/main/resources/application.properties
+++ b/ElectricityBillPortal/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://Localhost:3306/electricitybilldb
 spring.datasource.username=root
-spring.datasource.password=Lavidavi26@
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 
